# django_test

./: .gitignore  docker-compose.yml  manage.py  pyproject.toml
accounts/: models.py
accounts/migrations/: 0001_initial.py
accounts/templates/account/: email_confirm.html  login.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  signup.html
accounts/templates/email/: email_confirmation_message.txt  password_reset_key_message.txt
diary/: forms.py  models.py  urls.py  views.py
diary/migrations/: 0001_initial.py
diary/templates/: base.html  diary_create.html  diary_delete.html  diary_detail.html  diary_list.html  diary_update.html  index.html  inquiry.html
diary/tests/: test_views.py
dockerfiles/mysql/: Dockerfile
dockerfiles/python/: Dockerfile
private_diary/: settings.py  settings_common.py  settings_dev.py  urls.py
static/css/: mystyle.css
